# mpl-inscription

./: .gitignore  README.md
clients/cli/commands/test/: createCollection.ts
clients/js/src/: associatedInscription.ts
clients/js/test/: _setup.ts
clients/rust/tests/: create.rs
configs/: shank.cjs  validator.cjs
configs/scripts/program/: dump.sh
idls/: mpl_inscription.json  mpl_inscription_program.json
programs/inscription/: Cargo.toml
programs/inscription/src/: entrypoint.rs  error.rs  lib.rs  state.rs
programs/inscription/src/instruction/: mod.rs
programs/inscription/src/processor/: clear_data.rs  close.rs  create_shard.rs  initialize_associated_inscription.rs  initialize_from_mint.rs  mod.rs  set_mint.rs  write_data.rs
programs/mpl-inscription/: Cargo.toml
programs/mpl-inscription/src/: error.rs  lib.rs  state.rs
programs/mpl-inscription/src/instruction/: mod.rs
programs/mpl-inscription/src/processor/: add_authority.rs  allocate.rs  close.rs  initialize.rs  initialize_associated_inscription.rs  initialize_from_mint.rs  mod.rs  remove_authority.rs
