[package]
name = "mpl-inscription-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
shank = { path = "../../../shank/shank" }
num-derive = "^0.3"
num-traits = "^0.2"
domichain-program = { path = "../../../domichain/sdk/program" }
thiserror = "^1.0"
mpl-utils = { version = "0.2", path = "../../../token-metadata/metaplex-program-library/core/rust/utils" }
serde_json = { version = "1.0.108", features = ["std"] }
token_metadata = { version = "1.13.3", path = "../../../token-metadata/programs/token-metadata/program", features = [ "no-entrypoint" ] }
spl-token = { path = "../../../domichain-program-library/token/program", version = ">= 3.5.0, < 5.0", features = ["no-entrypoint"] }
